--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
 	<groupId>com.voodoodyne.hattery</groupId>
 	<artifactId>hattery</artifactId>
-	<version>0.6</version>
+	<version>0.7-SNAPSHOT</version>
 
 	<name>Hattery</name>
 	<description>Fluent, immutable Java API for making HTTP calls</description>
@@ -17,7 +17,7 @@
 	<scm>
 		<url>scm:git:https://github.com/stickfigure/hattery</url>
 		<developerConnection>scm:git:https://github.com/stickfigure/hattery</developerConnection>
-	  <tag>hattery-0.6</tag>
+	  <tag>HEAD</tag>
   </scm>
 	<licenses>
 		<license>
