--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<properties>
+		<gae.version>1.9.26</gae.version>
 		<jackson.version>2.5.1</jackson.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -184,7 +185,7 @@
 		<dependency>
 			<groupId>com.google.appengine</groupId>
 			<artifactId>appengine-api-1.0-sdk</artifactId>
-			<version>1.9.21</version>
+			<version>${gae.version}</version>
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
@@ -208,6 +209,19 @@
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-library</artifactId>
 			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.appengine</groupId>
+			<artifactId>appengine-testing</artifactId>
+			<version>${gae.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.appengine</groupId>
+			<artifactId>appengine-api-stubs</artifactId>
+			<version>${gae.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
