--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>com.voodoodyne.hattery</groupId>
 	<artifactId>hattery</artifactId>
-	<version>0.9</version>
+	<version>0.10-SNAPSHOT</version>
 
 	<name>Hattery</name>
 	<description>Fluent, immutable Java API for making HTTP calls</description>
@@ -18,7 +18,7 @@
 	<scm>
 		<url>scm:git:https://github.com/stickfigure/hattery</url>
 		<developerConnection>scm:git:https://github.com/stickfigure/hattery</developerConnection>
-	  <tag>hattery-0.9</tag>
+	  <tag>HEAD</tag>
   </scm>
 	<licenses>
 		<license>
