--- a/pom.xml
+++ b/pom.xml
@@ -187,7 +187,7 @@
 			<artifactId>appengine-api-1.0-sdk</artifactId>
 			<version>${gae.version}</version>
 			<scope>compile</scope>
-			<optional>true</optional>
+ 			<optional>true</optional> 
 		</dependency>
 
 		<!-- Testing -->
@@ -223,6 +223,18 @@
 			<artifactId>appengine-api-stubs</artifactId>
 			<version>${gae.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			  <groupId>org.apache.commons</groupId>
+			  <artifactId>commons-lang3</artifactId>
+			  <version>3.4</version>
+			  <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-all</artifactId>
+		    <version>1.10.19</version>
+		    <scope>test</scope>
 		</dependency>
 	</dependencies>
 
