--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,8 @@
 		<gae.version>1.9.51</gae.version>
 		<jackson.version>2.8.6</jackson.version>
 
-		<junit.milestone.version>M4</junit.milestone.version>
-		<junit.jupiter.version>5.0.0-${junit.milestone.version}</junit.jupiter.version>
-		<junit.platform.version>1.0.0-${junit.milestone.version}</junit.platform.version>
+		<junit.jupiter.version>5.0.3</junit.jupiter.version>
+		<junit.platform.version>1.0.3</junit.platform.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -237,23 +236,17 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>java-hamcrest</artifactId>
-			<version>2.0.0.0</version>
+			<groupId>com.google.truth</groupId>
+			<artifactId>truth</artifactId>
+			<version>0.36</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>2.7.22</version>
-			<exclusions>
-				<!-- get rid of old hamcrest version -->
-				<exclusion>
-					<groupId>org.hamcrest</groupId>
-					<artifactId>hamcrest-core</artifactId>
-				</exclusion>
-			</exclusions>
+			<version>2.8.47</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
