[maven-release-plugin] prepare release hattery-0.36

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
 	<groupId>com.voodoodyne.hattery</groupId>
 	<artifactId>hattery</artifactId>
-	<version>0.36-SNAPSHOT</version>
+	<version>0.36</version>
 
 	<name>Hattery</name>
 	<description>Fluent, immutable Java API for making HTTP calls</description>
@@ -22,7 +22,7 @@
 	<scm>
 		<url>scm:git:git@github.com:stickfigure/hattery</url>
 		<developerConnection>scm:git:git@github.com:stickfigure/hattery</developerConnection>
-		<tag>HEAD</tag>
+		<tag>hattery-0.36</tag>
 	</scm>
 	<licenses>
 		<license>
