--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 		<gae.version>1.9.51</gae.version>
 		<jackson.version>2.8.6</jackson.version>
 
-		<junit.jupiter.version>5.0.3</junit.jupiter.version>
-		<junit.platform.version>1.0.3</junit.platform.version>
+		<junit.jupiter.version>5.5.2</junit.jupiter.version>
+		<junit.platform.version>1.3.2</junit.platform.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -87,7 +87,7 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
+				<version>3.8.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -97,7 +97,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>2.4</version>
+				<version>3.1.0</version>
 				<executions>
 					<execution>
 						<goals>
@@ -110,7 +110,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.1</version>
+				<version>3.1.1</version>
 				<executions>
 					<execution>
 						<goals>
@@ -119,6 +119,7 @@
 					</execution>
 				</executions>
 				<configuration>
+					<source>8</source>
 					<additionalparam>-Xdoclint:none</additionalparam>
 				</configuration>
 			</plugin>
@@ -126,7 +127,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>versions-maven-plugin</artifactId>
-				<version>2.3</version>
+				<version>2.7</version>
 				<executions>
 					<execution>
 						<phase>compile</phase>
@@ -141,7 +142,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+				<version>2.22.2</version>
 				<dependencies>
 					<dependency>
 						<groupId>org.junit.platform</groupId>
@@ -159,7 +160,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.1</version>
+				<version>2.5.3</version>
 				<configuration>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 					<releaseProfiles>release-sign-artifacts</releaseProfiles>
@@ -169,7 +170,7 @@
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
 				<artifactId>nexus-staging-maven-plugin</artifactId>
-				<version>1.6.5</version>
+				<version>1.6.8</version>
 				<extensions>true</extensions>
 				<configuration>
 					<serverId>ossrh</serverId>
@@ -184,20 +185,20 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.16.16</version>
+			<version>1.18.10</version>
 			<scope>provided</scope> <!-- only needs to be present for compile -->
 		</dependency>
 
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>21.0</version>
+			<version>28.1-jre</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.24</version>
+			<version>1.7.28</version>
 		</dependency>
 
 		<dependency>
@@ -238,14 +239,14 @@
 		<dependency>
 			<groupId>com.google.truth</groupId>
 			<artifactId>truth</artifactId>
-			<version>0.36</version>
+			<version>1.0</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>2.8.47</version>
+			<version>3.0.0</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -264,7 +265,7 @@
 		<dependency>
 			  <groupId>org.apache.commons</groupId>
 			  <artifactId>commons-lang3</artifactId>
-			  <version>3.5</version>
+			  <version>3.9</version>
 			  <scope>test</scope>
 		</dependency>
 	</dependencies>
