--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,7 @@
 				<configuration>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 					<releaseProfiles>release-sign-artifacts</releaseProfiles>
+					<arguments>-DskipTests</arguments>
 				</configuration>
 			</plugin>
 
